crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__single_use__branch_barrier.snap
---
source: crates/nash-codegen/src/optimizer_tests/single_use.rs
assertion_line: 40
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- baseline\\n{}\\n--- core after\\n{}\\n--- candidate\\n{}\",\npretty(before), output(&baseline), pretty(after), output(&candidate)))"
---
--- unoptimized Core
let x#1 : int = trace "failure" in error in
case@Bool true of
  True -> 42
  False -> x#1
--- unoptimized UPLC
(program 1.1.0
  [(lam x_1 (case (con bool True) x_1 (con integer 42)))
    (force [[(force (builtin trace)) (con string "failure")] (delay (error))])])
--- optimized Core
let x#2 : int = trace "failure" in error in
42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam x_1 (con integer 42))
      (force [[builtin_2 (con string "failure")] (delay (error))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let x#1 : int = trace "failure" in error in
case@Bool true of
  True -> 42
  False -> x#1
--- baseline
--- uplc
(program 1.1.0
  [(lam x_1 (case (con bool True) x_1 (con integer 42)))
    (force [[(force (builtin trace)) (con string "failure")] (delay (error))])])
--- result
error: ExplicitErrorTerm
--- logs
["failure"]
--- core after
let x#1 : int = trace "failure" in error in
case@Bool true of
  True -> 42
  False -> x#1
--- candidate
--- uplc
(program 1.1.0
  [(lam x_1 (case (con bool True) x_1 (con integer 42)))
    (force [[(force (builtin trace)) (con string "failure")] (delay (error))])])
--- result
error: ExplicitErrorTerm
--- logs
["failure"]
