crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__single_use__capture_barrier.snap
---
source: crates/nash-codegen/src/optimizer_tests/single_use.rs
assertion_line: 40
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- baseline\\n{}\\n--- core after\\n{}\\n--- candidate\\n{}\",\npretty(before), output(&baseline), pretty(after), output(&candidate)))"
---
--- unoptimized Core
let x#1 : int = trace "capture" in 1 in
let unused#3 : int -> int = \y#2 : int -> x#1 in
42
--- unoptimized UPLC
(program 1.1.0
  [(lam x_1 [(lam unused_3 (con integer 42)) (lam y_2 x_1)])
    (force
      [[(force (builtin trace)) (con string "capture")] (delay (con integer 1))])])
--- optimized Core
let x#4 : int = trace "capture" in 1 in
42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam x_1 (con integer 42))
      (force [[builtin_2 (con string "capture")] (delay (con integer 1))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let x#1 : int = trace "capture" in 1 in
let unused#3 : int -> int = \y#2 : int -> x#1 in
42
--- baseline
--- uplc
(program 1.1.0
  [(lam x_1 [(lam unused_3 (con integer 42)) (lam y_2 x_1)])
    (force
      [[(force (builtin trace)) (con string "capture")] (delay (con integer 1))])])
--- result
(con integer 42)
--- logs
["capture"]
--- core after
let x#1 : int = trace "capture" in 1 in
let unused#3 : int -> int = \y#2 : int -> x#1 in
42
--- candidate
--- uplc
(program 1.1.0
  [(lam x_1 [(lam unused_3 (con integer 42)) (lam y_2 x_1)])
    (force
      [[(force (builtin trace)) (con string "capture")] (delay (con integer 1))])])
--- result
(con integer 42)
--- logs
["capture"]
