crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__single_use__trace_barrier.snap
---
source: crates/nash-codegen/src/optimizer_tests/single_use.rs
assertion_line: 40
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- baseline\\n{}\\n--- core after\\n{}\\n--- candidate\\n{}\",\npretty(before), output(&baseline), pretty(after), output(&candidate)))"
---
--- unoptimized Core
let x#1 : int = trace "first" in 42 in
trace "second" in x#1
--- unoptimized UPLC
(program 1.1.0
  [(lam x_1 (force [[(force (builtin trace)) (con string "second")] (delay x_1)]))
    (force
      [[(force (builtin trace)) (con string "first")] (delay (con integer 42))])])
--- optimized Core
let x#2 : int = trace "first" in 42 in
trace "second" in x#2
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam x_1 (force [[builtin_2 (con string "second")] (delay x_1)]))
      (force [[builtin_2 (con string "first")] (delay (con integer 42))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let x#1 : int = trace "first" in 42 in
trace "second" in x#1
--- baseline
--- uplc
(program 1.1.0
  [(lam x_1 (force [[(force (builtin trace)) (con string "second")] (delay x_1)]))
    (force
      [[(force (builtin trace)) (con string "first")] (delay (con integer 42))])])
--- result
(con integer 42)
--- logs
["first", "second"]
--- core after
let x#1 : int = trace "first" in 42 in
trace "second" in x#1
--- candidate
--- uplc
(program 1.1.0
  [(lam x_1 (force [[(force (builtin trace)) (con string "second")] (delay x_1)]))
    (force
      [[(force (builtin trace)) (con string "first")] (delay (con integer 42))])])
--- result
(con integer 42)
--- logs
["first", "second"]
